Bug: Fixed contact form for small screens
On smaller screens, the input and textarea form elements were overflowing their containers. The input was also not resizing to the same width as the textarea on small screens. This was fixed.

--- a/styles.css
+++ b/styles.css
@@ -134,15 +134,15 @@ a:link, a:visited {
 
 .contact-user {
   max-width: 600px;
-  width: 100%;
+  width: 90%;
   height: 25px;
-  margin: 5px 30px;
+  margin: 5px;
   font-size: 18px;
 }
 
 .contact-message {
   max-width: 600px;
-  width: 100%;
+  width: 90%;
   height: 200px;
   margin: 5px;
   font-size: 18px;
